# kenshi-ai

./: .gitignore  README.md
.github/workflows/: build-native.yml
docs/: BUILD.md
mod/: kenshi-ai.json
mod/config/: kenshi_ai.ini.example
native/: CMakeLists.txt
native/include/: input_dialog.h  kenshi_ai.h
native/src/: actions.cpp  config.cpp  hooks.cpp  input_dialog.cpp  ipc.cpp  plugin.cpp  state.cpp
python/: requirements.txt  server.py
python/agents/: chat_agent.py  d2d_agent.py  synthesis_agent.py
python/config/: models.json  models.json.example  providers.json.example
python/memory/: __init__.py  chroma_memory.py  qdrant_memory.py
python/prompts/: d2d.txt  profile_gen.txt  system_npc.txt  world_synthesis.txt
python/providers/: __init__.py  router.py
python/schemas/: __init__.py  actions.py
scripts/: smoke-test.sh
